--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
-    "brcypt": "^1.0.1",
+    "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
